<resources>
    <string name="app_name">Promoz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Menu -->
    <string name="menu_perfil">Perfil</string>
    <string name="menu_wallet">Carteira</string>
    <string name="menu_missions">Missões</string>
    <string name="menu_shop">Loja</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_feedback">Enviar feedback</string>
    <string name="menu_terms">Termos de Serviço</string>
    <string name="title_activity_carteira">CarteiraActivity</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_shop">Loja</string>
    <string name="title_activity_cadastrar">Cadastrar</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Carteira -->
    <string name="saldo_atual">Saldo atual</string>
    <string name="out_of_money">0</string>
    <string name="sete_dias">7 DIAS</string>
    <string name="quinze_dias">15 DIAS</string>
    <string name="trinta_dias">30 DIAS</string>

    <!-- Start Screen -->
    <string name="promoz">PromoZ</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="terms">Ao me cadastrar, eu concordo com os Termos de Serviço e Termos de Política de Privacidade do PromoZ.</string>
    <string name="camposNovaSenha">Os campos da nova senha devem ser iguais.</string>
    <string name="senhaAtualErrada">A senha atual esta incorreta.</string>
    <string name="senhaAtualizada">Senha atualizada.</string>
    <string name="saldoInsuficiente">Saldo Insuficiente</string>>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Entrar</string>
    <!-- Strings related to Cupom -->
    <string name="go_to_shop">IR PARA LOJA</string>

    <!-- Strings related to Perfil -->
    <string name="user_name">Nome do Usuário</string>
    <string name="user_email">usuario@promoz.com.br</string>
    <string name="change_password">Alterar senha</string>
    <string name="logout">Sair</string>
    <string name="logout_confirm">Temos promoções e ofertas incríveis por aqui! Tem certeza que vai perder isso?</string>
    <string name="now_pass">Digite sua senha atual</string>
    <string name="new_pass">Digite sua nova senha</string>
    <string name="new_pass_again">Confirme sua nova senha</string>
    <string name="confirm_bt">Confirmar</string>
    <string name="cancel_bt">Cancelar</string>
    <string name="no_bt">Não</string>
    <string name="no_bt_funny">Quero ficar!</string>
    <string name="yes_bt">Sim</string>
    <string name="yes_bt_funny">Depois eu volto!</string>

    <!-- Strings related to Loja -->
    <string name="buy">Comprar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_user">Email/Usuário</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_cpf">CPF</string>
    <string name="lost_pass">Esqueceu a senha?</string>
    <string name="perfil_photo_upload">Escolher foto do Perfil</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_again">Confirme sua senha</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Login inválido!</string>
    <string name="error_invalid_password">Pass</string>
    <string name="error_login">Usuário não cadastrado!</string>
    <string name="error_incorrect_password">Senha incorreta!</string>
    <string name="error_field_required">Campo obrigatório!</string>
    <string name="error_invalid_name">Name</string>
    <string name="error_invalid_password_confirm">Pass</string>

    <string name="title_activity_loja">Loja</string>
    <string name="error_funny">Ops! Aconteceu algo estranho. Tente novamente!</string>

    <string name="txt_lembrar_senha">Esqueceu a senha?</string>
    <string name="why_need_cpf"><a href="http://www.consultec.com.br/inscbd/2005insc/logos/960.jpg">Por que pedimos seu CPF?</a></string>
    <string name="defaultpassword"><a href="https://goo.gl/fTc4Ae">Esqueceu a senha?</a></string>

    <!-- Strings related to database ERROR  -->
    <string name="tag_error_db">error_database</string>
    <string name="error_save_or_update">Erro ao salvar ou atualizar registro!</string>
    <string name="error_user_by_id">Erro ao buscar usuário!</string>
    <string name="error_funny_db">Ops! Aconteceu algo estranho. Recomendamos reiniciar o app!</string>

</resources>
