<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/menu1">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil_normal"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet_black_grande"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_missions"
            android:icon="@drawable/mission_normal"
            android:title="@string/menu_missions" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/shop_normal"
            android:title="@string/menu_shop" />
    </group>


    <group  android:checkableBehavior="single"
        android:id="@+id/menu2">
        <item
            android:id="@+id/nav_config"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_terms"
            android:title="@string/menu_terms" />
    </group>

</menu>
