<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:background="@drawable/back_start_screen"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="promoz.com.br.promoz.StartScreenActivity">

    <!--layout botão PORCO / TITULO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/porco_start_screen"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/promoztv"
        android:text="@string/promoz"
        android:textSize="50dp"
        android:textColor="@color/colorSecondary"/>

</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textSize="15dp"
        android:onClick="faceBookBt"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/face_buttom"
        android:textColor="@color/colorSecondary"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:onClick="googleBt"
        android:textSize="15dp"
        android:background="@drawable/google_buttom"
        android:textColor="@color/colorSecondary"/>



    <!--layout botão ENTRAR / CADASTRAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textSize="15dp"
        android:layout_marginRight="25dp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:padding="10dp"
        android:onClick="cadastro"
        android:elevation="0dp"
        android:textColor="@drawable/text_singup_buttom_color"
        android:background="@drawable/singup_buttom_background"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textSize="15dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="10dp"
            android:onClick="logar"
            android:elevation="0dp"
            android:textColor="@drawable/text_singup_buttom_color"
            android:background="@drawable/singup_buttom_background"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_bellow"
        android:textColor="@color/colorSecondary"
        android:textAlignment="center"/>

</LinearLayout>
